--- a/examportal using agular,java/examserver/src/main/resources/application.properties
+++ b/examportal using agular,java/examserver/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+
+
+#for image or file upload all configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+project.image=F:/Ashish/
